// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio renders the component 1`] = `
<div>
  <audio
    controls=""
    data-autoplay="true"
    id="foo"
  />
</div>
`;

exports[`Audio renders the component 2`] = `
<div>
  <audio
    data-autoplay="false"
    id="foo"
  />
</div>
`;
